# openg2p-deduplicator

./: .copier-answers.yml  .pre-commit-config.yaml  Dockerfile  README.md  main.py
.github/workflows/: docker-build.yml  helm-push.yml  openapi-push.yml  publish.yml  test.yml
charts/openg2p-deduplicator/: Chart.yaml  README.md  questions.yaml  values.yaml
charts/openg2p-deduplicator/templates/: _helpers.tpl  deployment.yaml  service-account.yaml  service.yaml
charts/openg2p-deduplicator/templates/opensearch/: gateway.yaml  virtualservice.yaml
openg2p-deduplicator/: README.md  pyproject.toml
openg2p-deduplicator/src/openg2p_deduplicator/: app.py  config.py
openg2p-deduplicator/src/openg2p_deduplicator/controllers/: config_controller.py  get_duplicates_controller.py  health_controller.py
openg2p-deduplicator/src/openg2p_deduplicator/exceptions/: opensearch_exception.py
openg2p-deduplicator/src/openg2p_deduplicator/schemas/: config_request.py  deduplicate_request.py  get_duplicates_response.py
openg2p-deduplicator/src/openg2p_deduplicator/services/: config_service.py  deduplication_service.py  opensearch_service.py
openg2p-deduplicator/tests/: test_base.py
openg2p-opensearch-deduplication-service/: Dockerfile  README.md  main.py  pyproject.toml
openg2p-opensearch-deduplication-service/src/openg2p_opensearch_deduplication_service/: app.py  config.py
openg2p-opensearch-deduplication-service/src/openg2p_opensearch_deduplication_service/controllers/: config_controller.py  deduplicate_controller.py  get_duplicates_controller.py  health_controller.py
(+8 files in other folders)
